--- a/src/pug/sections/implantation/_review.pug
+++ b/src/pug/sections/implantation/_review.pug
@@ -7,13 +7,16 @@ section.testimonial.testimonial--inner.has-absBtn
 		
 		.header-block
 			h2.h2 Отзывы клиентов 
-			.about-review-nav.flex-nav
+			.about-review-nav.flex-nav.abs-btn
 				button.arrow-prev
 					svg.svg-rarr
 						use(href='./img/sprite.svg#svg-rarr')
 				button.arrow-next
 					svg.svg-rarr
 						use(href='./img/sprite.svg#svg-rarr')
+		
+		
+		
 		.about-review.swiper
 			.swiper-wrapper
 				.swiper-slide.testimonial-box
@@ -42,7 +45,7 @@ section.testimonial.testimonial--inner.has-absBtn
 								span Генеральный директор OOO "Стройс+
 							
 							.testimonial-card__txt
-								p Посетив стоматологию, главный врач Карен Овсепович быстро разобрался в ситуации, поменял полностью конструкцию импланта, который меня беспокоил. Уже несколько лет не знаю проблем с этим зубом. Теперь у меня лечится вся семья, дети, сотрудники и друзья. Очень профессиональный и заботливый подход.
+								p Посетив стоматологию, главный врач Карен Овсепович быстро разобрался в ситуации, поменял полностью конструкцию импланта, который меня беспокоил. 
 							
 							.rating-block
 								span.rating-star
@@ -59,7 +62,7 @@ section.testimonial.testimonial--inner.has-absBtn
 								span Генеральный директор OOO "Стройс+
 							
 							.testimonial-card__txt
-								p Я вспоминаю тот прекрасный момент, когда я впервые встретила Карена Овсеповича Даниеляна и он расположил меня с первой минуты. Самое главное, что он выслушал мою ключевую потребность и все мои страхи. Он выслушал это так, как-будто это единственная проблема в мире и она - моя!
+								p Я вспоминаю тот прекрасный момент, когда я впервые встретила Карена Овсеповича Даниеляна и он расположил меня с первой минуты. Самое главное, что он выслушал мою ключевую потребность 
 							
 							.rating-block
 								span.rating-star
@@ -102,10 +105,6 @@ section.testimonial.testimonial--inner.has-absBtn
 								span.rating-star
 								span.rating-star
 								span.rating-star.rating-star.disable
-			.testimonial-slider-nav.flex
-				button.arrow-prev
-					svg.svg-rarr
-						use(href='./img/sprite.svg#svg-rarr')
-				button.arrow-next
-					svg.svg-rarr
-						use(href='./img/sprite.svg#svg-rarr')
+		
+
+		a(href="#!").btn-primary.visible-sm.show-more-btn Показать больше 
