--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,6 +14,8 @@ block content
 			a(href="doctors.html") Наши врачи
 			a(href="implantation.html") Имплантация
 			a(href="hygiene.html") Гигиена
+			a(href="surgery.html") Хирургия
+			a(href="orthopedics.html") Ортопедия
 
 block variables
 	-var title = "NewLineDent";
