--- a/src/pug/sections/_service-page-content.pug
+++ b/src/pug/sections/_service-page-content.pug
@@ -1,8 +1,8 @@
-mixin servCard(imgSrc, title, par='Хирургическое лечение и удаление зубов')
+mixin servCard(imgSrc, title, par='Хирургическое лечение и удаление зубов', link="#!")
 	.serv-card
 		.serv-card__top.flex
 			.serv-card__title
-				.title-26 !{title}
+				a(href="" +link).title-26 !{title}
 				p !{par}
 			.serv-card__img
 				img(src="./img/service/serv"+ imgSrc +".svg" width='101' height='105' loading='lazy' alt='img')
@@ -26,21 +26,21 @@ section.service.pt-20
 	.container
 		.service-content
 			.header-col
-				h1.title-36 услуги
+				h1.title-36.txt-upper услуги
 				p Широкий спектр услуг. Стоматология Newlinedent предлагает полный цикл услуг, начиная от профессионального отбеливания зубов и заканчивая имплантацией всего зубного ряда под ключ.
 			.service-content-grid.flex
 				.service-content__column
 					+servCard(1, 'Консультация и диагностика')
 					+servCard(2, 'Онлайн консультация')
-					+servCard(3, 'Имплантация зубов', 'Все виды имплантации и сопутствующие операции по костной пластике')
+					+servCard(3, 'Имплантация зубов', 'Все виды имплантации и сопутствующие операции по костной пластике', 'implantation.html')
 					+servCard(4, 'Имплантация All-on-4,<br>All-on-6', 'Все виды имплантации и сопутствующие операции по костной пластике')
-					+servCard(5, 'Удаление зубов')
+					+servCard(5, 'Удаление зубов','surgery.html')
 					+servCard(6, 'Пародонтология', 'Решение проблем с дёснами')
 				
 				.service-content__column
-					+servCard(7, 'Терапия','Все виды лечения при зубных болях и незначительных повреждениях зубов.')
-					+servCard(8, 'Ортопедия', 'Все виды протезирования зубов - коронками, винирами, съемное и т.д.')
+					+servCard(7, 'Терапия','Все виды лечения при зубных болях и незначительных повреждениях зубов.', ' therapy.html')
+					+servCard(8, 'Ортопедия', 'Все виды протезирования зубов - коронками, винирами, съемное и т.д.','orthopedics.html')
 					+servCard(9, 'Ортодонтия', 'Исправление прикуса брекетами, каппами и пластинками.')
-					+servCard(10, 'Гигиена', 'Профилактическая стоматология и отбеливание зубов')
-					+servCard(11, 'Отбеливание ', 'Профилактическая стоматология и отбеливание зубов')
+					+servCard(10, 'Гигиена', 'Профилактическая стоматология и отбеливание зубов','hygiene.html')
+					+servCard(11, 'Отбеливание ', 'Профилактическая стоматология и отбеливание зубов','whitening.html')
 					+servCard(12, 'Седация', 'Профилактическая стоматология и отбеливание зубов')
