--- a/src/pug/sections/_service-poppulare.pug
+++ b/src/pug/sections/_service-poppulare.pug
@@ -8,7 +8,7 @@ section.poppular-service.has-absBtn
 		
 		.header-block
 			h2.h2 Популярные услуги
-			a(href="#!").btn-primary.abs-btn
+			a(href="service-page.html").btn-primary.abs-btn
 				span Посмотреть больше услуг
 				svg.svg-rarr
 					use(href='./img/sprite.svg#svg-rarr')
