--- a/src/pug/sections/before-after/_promo.pug
+++ b/src/pug/sections/before-after/_promo.pug
@@ -10,7 +10,7 @@
 	.container
 		.promo-inner__grid.grid-two-column
 			.promo-inner__title.flex-col
-				h1.h1 Фото работ:<br>до и после
+				h1.h1.txt-upper Фото работ:<br>до и после
 				p.txt-24 Реальные результаты, которые вдохновляют
 				.promo-inner__btn
 					a(href="#!").btn-primary.sm-100
