--- a/src/pug/sections/doctors/_promo.pug
+++ b/src/pug/sections/doctors/_promo.pug
@@ -9,6 +9,6 @@
 	
 	.container
 		.promo-title
-			h1.title-36 Наши врачи
+			h1.title-36.txt-upper Наши врачи
 			.hide-sm
 				p.txt-16 В нашей клинике работают опытные стоматологи, каждый из которых — эксперт в своей области. Мы заботимся о здоровье ваших зубов с вниманием и профессионализмом, предлагая индивидуальный подход к каждому пациенту. Ваша улыбка в надежных руках!
