--- a/src/pug/sections/implantation/_promo.pug
+++ b/src/pug/sections/implantation/_promo.pug
@@ -12,7 +12,7 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36 Имплантация<br>зубов
+					h1.title-36.txt-upper Имплантация<br>зубов
 					.promo-subtitle
 						p Врачи экспертного уровня
 						p За 9 лет установили более 30 000 имплантатов
