--- a/src/pug/sections/page-about/_promo.pug
+++ b/src/pug/sections/page-about/_promo.pug
@@ -21,7 +21,7 @@
 		
 		.promo-about__content
 			.promo-about__title
-				h1.h1.txt-white Стоматологическая #[span.gogol-text.txt-white клиника]  newlinedent
+				h1.h1.txt-white.txt-upper  Стоматологическая #[span.gogol-text.txt-white клиника]  newlinedent
 			
 			.promo-about__description
 				p Клиника #[strong Newlinedent] — это комфорт и качество. Наши специалисты используют современные технологии и уделяют внимание каждому пациенту, чтобы лечение проходило легко и без стресса.
