--- a/src/pug/sections/promos/_promo-surgery.pug
+++ b/src/pug/sections/promos/_promo-surgery.pug
@@ -13,11 +13,11 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36.txt-upper Профессиональная гигиена полости рта
+					h1.title-36 Удаление зубов любой сложности, без боли и стресса
 					.promo-subtitle
-						p Врачи экспертного уровня
-						p За 9 лет установили более 30 000 имплантатов
-						p Помогаем в сложных случаях
+						p Безболезненные и атравматичные методы удаления
+						p Удаление ретинированных и дистопированных зубов
+						p Удаление в день обращения
 						
 					.text-card
 						p.txt-primary Ближайшее время для записи на консультацию
@@ -31,52 +31,42 @@
 				
 				.rotate-image__group.image-count-2
 					.rotate-image.rotate-image1
-						img(src='./img/rotate/13.webp' width='263' height='288' loading='lazy' alt='img')
+						img(src='./img/rotate/15.webp' width='263' height='288' loading='lazy' alt='img')
 						.flex
 							span.img-logo
 							
 					.rotate-image.rotate-image2
-						img(src='./img/rotate/14.webp' width='263' height='288' loading='lazy' alt='img')
+						img(src='./img/rotate/16.webp' width='263' height='288' loading='lazy' alt='img')
 						.flex
 							span.img-logo
 					
 				.promo-product-cards
 					//card
-					.product-card.product-card--short
+					.product-card
 						.product-card__top
 							.flex
 								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
+									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+									.product-card__title Консультация врача
+									.time-element 30 минут 
+							p (с учетом анестезии, удаления зуба, наложения швов)
 						
 						.product-card__price
-							p 99 500 &#8381;
+							p 3 000 &#8381;
 					//card
-					.product-card.product-card--short
+					.product-card
 						.product-card__top
 							.flex
 								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
+									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+									.product-card__title Удаление<br>зуба
+									.time-element 30 минут 
+							p (с учетом анестезии, удаления зуба, наложения швов)
 						
 						.product-card__price
-							p 99 500 &#8381;
-					//card
-					.product-card.product-card--short
-						.product-card__top
-							.flex
-								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
-						
-						.product-card__price
-							p 99 500 &#8381;
+							p 3 000 &#8381;
 					
 	//bottom row
 	.promo-bottom.flex
