--- a/src/scss/sections/_promo-main.scss
+++ b/src/scss/sections/_promo-main.scss
@@ -105,7 +105,7 @@
 		
 	.promo-title__head{
 		max-width: 440px;
-		.h1, h1{margin-bottom: 0.5em;}
+		.h1, h1{margin-bottom: 0.5em; text-transform: uppercase;}
 		.promo-subtitle{
 			font-weight: 400;
 			font-size: 24px;
