--- a/src/pug/sections/implantation/_doctors.pug
+++ b/src/pug/sections/implantation/_doctors.pug
@@ -38,7 +38,7 @@ section.team.team-slider
 		
 		.header-block
 			h2.h2 Для вас&nbsp;работают опытные профессионалы
-			a(href="#!").btn-primary.hide-sm 
+			a(href="doctors.html").btn-primary.hide-sm 
 				span Все врачи
 				svg.svg-rarr
 					use(href='./img/sprite.svg#svg-rarr')
