--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -8,7 +8,7 @@ section.team
 		
 		.header-block
 			h2.h2 Для вас работают опытные профессионалы
-			a(href="#!").btn-primary.hide-sm 
+			a(href="doctors.html").btn-primary.hide-sm 
 				span Все врачи
 				svg.svg-rarr
 					use(href='./img/sprite.svg#svg-rarr')
