--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,6 +10,8 @@ block content
 			
 			a(href="review.html") Отзывы
 			a(href="about.html") О компании
+			a(href="blog.html") Блог
+			a(href="single-article.html") Одна статья
 			a(href="before_after.html") До/после
 			a(href="doctors.html") Наши врачи
 			a(href="implantation.html") Имплантация
