--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -93,7 +93,7 @@ footer.footer
 						li
 							a(href="#!") Отзывы
 						li
-							a(href="#!") блог
+							a(href="blog.html") блог
 						li
 							a(href="#!") контакты 
 						
