--- a/src/pug/pages/review.pug
+++ b/src/pug/pages/review.pug
@@ -9,7 +9,7 @@ block content
 					li
 						a(href="#!") Newlinedent
 					li
-						a(href="#!") Блог
+						a(href="blog.html") Блог
 		include ../sections/page-review/_review-section
 		include ../sections/page-review/_review-page-content
 		
