--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@
 @use "sections/_doctors.scss";
 @use "sections/_implantation.scss";
 @use "sections/_promo-special.scss";
+@use "sections/_blog.scss";
 
 
 
