--- a/src/pug/sections/blog/_promo-blog.pug
+++ b/src/pug/sections/blog/_promo-blog.pug
@@ -1,4 +1,4 @@
-.promo-special
+.promo-blog(style="background-image: url(./img/blog/promo-img.webp)")
 	.container
 		.breadcrumbs-wrapper
 			ul.breadcrumbs
@@ -7,76 +7,16 @@
 				li
 					a(href="#!") блог
 	
-	.promo-special-wrapper
+	.promo-blog-wrapper
 		.container
-			.promo-special-grid
-				.promo-special-text
-					.article-card
-						.article-tags.flex
-							.border-tag Импланты 
-							.border-tag 7 минут чтения 
-						.article-card__title Протезирование зубов в&nbsp;Москве
-						.article-card__img
-							img(src='./img/blog/img1.webp', srcset='./img/blog/img1@2x.webp 2x' width='322' height='144' loading='lazy' alt='img')
-						.article-card__txt
-							p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
-						.article-card__link
-							a(href="single-article.html").btn-primary Читать статью
-				.rotate-image__group.image-count-2
-					.rotate-image.rotate-image1
-						img(src='./img/rotate/13.webp' width='263' height='288' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-							
-					.rotate-image.rotate-image2
-						img(src='./img/rotate/14.webp' width='263' height='288' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-					
-				.promo-product-cards
-					//card
-					.product-card.product-card--short
-						.product-card__top
-							.flex
-								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
-						
-						.product-card__price
-							p 99 500 &#8381;
-					//card
-					.product-card.product-card--short
-						.product-card__top
-							.flex
-								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
-						
-						.product-card__price
-							p 99 500 &#8381;
-					//card
-					.product-card.product-card--short
-						.product-card__top
-							.flex
-								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
-						
-						.product-card__price
-							p 99 500 &#8381;
-					
-	//bottom row
-	.promo-bottom.flex
-		.container
-			.promo-bottom-content.flex.mobile-swipe
-				ul.flex
-					li цены под ключ
-					li возможна росрочка
-					li онлаин консультации
-					li подарочные сертикаты
+			.article-card
+				.article-tags.flex
+					.border-tag Импланты 
+					.border-tag 7 минут чтения 
+				.article-card__title Протезирование зубов в&nbsp;Москве
+				.article-card__img
+					img(src='./img/blog/img1.webp', srcset='./img/blog/img1@2x.webp 2x' width='322' height='144' loading='lazy' alt='img')
+				.article-card__txt
+					p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
+				.article-card__link
+					a(href="single-article.html").btn-primary Читать статью
