--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -54,7 +54,14 @@
 .sm-100{
 	@media (max-width: 767px) {
 	 width: 100%;
+	
 	}
+}
+.container.sm-100{
+	@media (max-width: 767px) {
+		width: 100%;
+		max-width: 100%;
+	   }
 }
 .btn-accent{
 	background-color: #B9B1A6;
