--- a/src/pug/sections/blog/_promo-blog-article.pug
+++ b/src/pug/sections/blog/_promo-blog-article.pug
@@ -10,7 +10,7 @@
 	.promo-blog-wrapper
 		.container
 			.article-card
-				.article-tags.flex
+				.tags-box.flex
 					.border-tag Импланты 
 					.border-tag 7 минут чтения 
 				.article-card__title Протезирование зубов в&nbsp;Москве
