--- a/src/pug/sections/blog/_promo-blog.pug
+++ b/src/pug/sections/blog/_promo-blog.pug
@@ -10,7 +10,7 @@
 	.promo-blog-wrapper
 		.container
 			.article-card
-				.article-tags.flex
+				.tags-box.flex
 					.border-tag Импланты 
 					.border-tag 7 минут чтения 
 				.article-card__title Протезирование зубов в&nbsp;Москве
@@ -19,4 +19,4 @@
 				.article-card__txt
 					p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				.article-card__link
-					a(href="single-article.html").btn-primary Читать статью
+					a(href="single-article.html").btn-primary.sm-100 Читать статью
