--- a/src/pug/pages/blog.pug
+++ b/src/pug/pages/blog.pug
@@ -4,17 +4,11 @@ block content
 	include ../sections/_header
 	main.main
 		include ../sections/blog/_promo-blog.pug
-		include ../sections/_steps-working
-		include ../sections/implantation/_doctors.pug
+		include ../sections/blog/_blog-content.pug
 		
-		include ../sections/implantation/_before-after.pug
-		
-		
-		include ../sections/implantation/_review
-		include ../sections/_faq
 	
 	//FOOTER
 	include ../sections/_footer
 
 block variables
-	-var title = "Гигиена";
+	-var title = "Блог";
