--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -20,7 +20,7 @@
 .svg-larr{
 	width: 38px;
 	height: 8px;
-	color: $pr;
+	color: #2E3033;
 	@media(min-width:768px) and (max-width: 1919px) {width: remy(38);height: remy(8);}
 }
 .arrow-prev .svg-rarr{
