--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -193,3 +193,35 @@
 	}
 	
 }
+.pagination{
+	align-items: center;
+	display: flex;
+	column-gap:20px;
+	flex-shrink: 0;
+    width: max-content;
+	.pagination-item{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 20px;
+		font-weight: 600;
+		line-height: 225%;
+		color: #2e3033;
+	}
+	.pagination-next, .pagination-prev{
+		font-weight: 500;line-height: 110%;
+		
+		column-gap:20px;
+		svg{width: 34px; height:12px;color: #2e3033;}
+
+	}
+	.pagination-dot{
+		
+		span{
+			width: 8px;
+			height: 8px;
+			border-radius: 50%;
+			background-color: #2e3033;
+		}
+	}
+}
