--- a/src/pug/sections/blog/_blog-content.pug
+++ b/src/pug/sections/blog/_blog-content.pug
@@ -75,7 +75,7 @@ section.blog-content
 					+blogCard
 
 					.tabs-content__footer.flex
-						a(href="#!").btn-primary Показать больше
+						a(href="#!").btn-primary.sm-100 Показать больше
 						.pagination
 							.pagination-item.pagination-prev
 								svg.svg-larr
@@ -83,7 +83,7 @@ section.blog-content
 								span Назад
 							.pagination-item
 								span 1
-							.pagination-item
+							.pagination-item.pagination-active
 								span 2
 							.pagination-item.pagination-dot
 								span
