--- a/src/scss/sections/_blog.scss
+++ b/src/scss/sections/_blog.scss
@@ -273,7 +273,10 @@
 		grid-column:  span 12;
 		padding-block:20px;
 		justify-content: space-between;
-		
+		@media (max-width: 767px) {
+		  flex-direction: column; row-gap: 20px;
+		  padding-top: 0;
+		}
 	}
 	.pagination{margin-left: auto;
 	}
