--- a/src/pug/sections/blog/_blog-content.pug
+++ b/src/pug/sections/blog/_blog-content.pug
@@ -10,7 +10,7 @@ mixin blogCard
 				.blog-card__title Протезирование зубов в Москве
 				p Это востребованная услуга, которая позволяет восстановить функциональность и эстетику улыбки. Современные стоматологические клиники предлагают широкий спектр решений...
 			.blog-card__link
-				a(href="blog.html").flex-link
+				a(href="single-article.html").flex-link
 					span Читать статью 
 					svg.svg-rarr
 						use(href='./img/sprite.svg#svg-rarr')
