--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@
 @use "sections/_implantation.scss";
 @use "sections/_promo-special.scss";
 @use "sections/_blog.scss";
+@use "sections/_blog-article.scss";
 
 
 
