--- a/src/pug/sections/blog/_article-content.pug
+++ b/src/pug/sections/blog/_article-content.pug
@@ -1,6 +1,28 @@
 section.single-article
 	.container
 		.single-article-grid.custom-text
+			//САЙДБАР
+			.article-sidebar
+				h3  Содержание
+				ul.content-menu
+					li.content-menu-item
+						a(href="#!") Основные виды протезирования зубов
+					li.content-menu-item
+						a(href="#!") Преимущества и недостатки различных методов протезирования
+					li.content-menu-item
+						a(href="#!") Этапы процесса протезирования
+					li.content-menu-item
+						a(href="#!") Материалы для изготовления зубных протезов
+					li.content-menu-item
+						a(href="#!") Выбор клиники и специалиста для протезирования в Москве
+					li.content-menu-item
+						a(href="#!") Стоимость протезирования зубов и факторы, влияющие на цену
+					li.content-menu-item
+						a(href="#!") Уход за протезами и рекомендации по эксплуатации
+					li.content-menu-item
+						a(href="#!") Заключение
+			
+			
 			//ОСНОВНОЙ КОНТЕНТ
 			.article-text
 				h2 Основные виды<br>протезирования зубов
@@ -34,6 +56,17 @@ section.single-article
 						.flex
 							span.img-caption виниры<br>что то там
 				
+				p В контексте долговечности и комфорта использования, несъемные протезы часто выигрывают соревнование. Они могут служить десятилетиями при правильном уходе и регулярных посещениях стоматолога, в то время как съемные протезы могут потребовать замены или корректировки через несколько лет. Комфорт несъемных протезов также выше, поскольку они не двигаются во рту и не вызывают дискомфорта, связанного с трением о десны или риском выпадения в неподходящий момент.
+				
+				p Однако протезирование зубов несъемными конструкциями может оказывать большее влияние на здоровье оставшихся зубов и десен. Например, для установки моста необходимо обтачивать соседние зубы, что может привести к их ослаблению. Имплантаты же требуют хирургического вмешательства и длительного восстановления, но при этом не оказывают давления на соседние зубы. Съемные протезы в этом плане менее инвазивны, но они могут способствовать атрофии костной ткани и вызывать раздражение десен при неправильном использовании или ношении.
+				p
+					strong Комбинированные протезы объединяют в себе элементы съемного и несъемного протезирования, предоставляя пациентам гибкие решения для восстановления зубного ряда. Такие протезы могут включать в себя:
+				ul
+					li #[strong Съемные секции для удобства очистки и гигиены.] (Протезирование зубов таким методом позволяет не только восстановить утраченные зубы, но и защитить оставшиеся от дальнейшего разрушения. В стоматологических клиниках Москвы применяются передовые технологии для изготовления несъемных протезов, что гарантирует их высокое качество и эстетичный вид.)
+					li #[strong Фиксируемые на имплантатах или корнях зубов элементы для увеличения надежности.]
+					li #[strong Специальные замковые системы для комбинирования съемных и несъемных частей.]
+				p Этот вид протезирования зубов позволяет пациентам наслаждаться преимуществами обоих методов, обеспечивая удобство и функциональность. В Москве комбинированное протезирование зубов доступно во многих стоматологических клиниках, где врачи помогут подобрать оптимальный вариант протеза в соответствии с индивидуальными потребностями каждого пациента.
+				
 				
 				h2 Преимущества и недостатки различных методов протезирования
 				p При выборе метода протезирования зубов важно учитывать различия между съемными и несъемными протезами. Съемные протезы обычно предлагают более доступное решение, особенно в случаях, когда необходимо заменить значительное количество зубов. Они также удобны в уходе, поскольку их можно легко извлечь и очистить. Однако несъемные протезы, такие как мосты и имплантаты, обеспечивают более естественный вид и ощущение, что делает их предпочтительным вариантом для многих пациентов, ищущих протезирование зубов в Москве.
@@ -42,25 +75,3 @@ section.single-article
 				p В контексте долговечности и комфорта использования, несъемные протезы часто выигрывают соревнование. Они могут служить десятилетиями при правильном уходе и регулярных посещениях стоматолога, в то время как съемные протезы могут потребовать замены или корректировки через несколько лет. Комфорт несъемных протезов также выше, поскольку они не двигаются во рту и не вызывают дискомфорта, связанного с трением о десны или риском выпадения в неподходящий момент.
 				p Однако протезирование зубов несъемными конструкциями может оказывать большее влияние на здоровье оставшихся зубов и десен. Например, для установки моста необходимо обтачивать соседние зубы, что может привести к их ослаблению. Имплантаты же требуют хирургического вмешательства и длительного восстановления, но при этом не оказывают давления на соседние зубы. Съемные протезы в этом плане менее инвазивны, но они могут способствовать атрофии костной ткани и вызывать раздражение десен при неправильном использовании или ношении.
 			
-			
-			
-			//САЙДБАР
-			.article-sidebar
-				h3  Содержание
-				ul.content-menu
-					li.content-menu-item
-						a(href="#!") Основные виды протезирования зубов
-					li.content-menu-item
-						a(href="#!") Преимущества и недостатки различных методов протезирования
-					li.content-menu-item
-						a(href="#!") Этапы процесса протезирования
-					li.content-menu-item
-						a(href="#!") Материалы для изготовления зубных протезов
-					li.content-menu-item
-						a(href="#!") Выбор клиники и специалиста для протезирования в Москве
-					li.content-menu-item
-						a(href="#!") Стоимость протезирования зубов и факторы, влияющие на цену
-					li.content-menu-item
-						a(href="#!") Уход за протезами и рекомендации по эксплуатации
-					li.content-menu-item
-						a(href="#!") Заключение
