--- a/src/pug/pages/single-article.pug
+++ b/src/pug/pages/single-article.pug
@@ -5,6 +5,7 @@ block content
 	main.main
 		include ../sections/blog/_promo-blog-article.pug
 		include ../sections/blog/_article-content.pug
+		include ../sections/blog/_doctors.pug
 		
 	//FOOTER
 	include ../sections/_footer
