--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -98,16 +98,17 @@
 }
 
 .btn-play{
-	width: 44px;
+	width: 43px;
 	height: 44px;
 	display: block;
 	background-image: url('../img/video/play.webp');
+	background-size: contain;
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	@media (min-width: 768px) and (max-width: 1919px) {
-		width: remy(44);
+		width: remy(43);
 	   height: remy(44);
 	}
 	@media (max-width: 767px) {
