--- a/src/pug/pages/single-article.pug
+++ b/src/pug/pages/single-article.pug
@@ -6,6 +6,7 @@ block content
 		include ../sections/blog/_promo-blog-article.pug
 		include ../sections/blog/_article-content.pug
 		include ../sections/blog/_doctors.pug
+		include ../sections/_review-section.pug
 		
 	//FOOTER
 	include ../sections/_footer
